tests/NormalTests/paczka1/fuzzy1/62908899.err
Error in line 4: A740 A515 24,7
Error in line 14: qs5kiOFn3 A515 84,2
Error in line 27: qs5kiOFn3 A740 65,4
Error in line 36: muNKA A632 47,C
Error in line 37: qs5kiOFn3 A632 52,86
Error in line 17: A740 S815 301,2
